# bevy_enum_event

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
tests/: check_override.rs  derive_enum_events.rs  enum_module_ident_macro.rs  fsm_generics.rs  integration_tests.rs  macro_usage.rs  variant_propagate.rs
