[package]
name = "bevy_enum_events"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "General-purpose enum to Bevy event conversion macro - generates event types from enum variants"
repository = "https://github.com/drmulks/bevy_enum_events"
authors = ["Dr. Florian Mulks <dr@mulks.ac>"]
keywords = ["bevy", "enum", "events", "macro"]
categories = ["game-development"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
bevy = { version = "0.16", default-features = false }
