[package]
name = "bevy_enum_event"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "General-purpose enum to Bevy event conversion macro - generates event types from enum variants with support for data-carrying variants"
repository = "https://github.com/ffmulks/bevy_enum_event"
authors = ["Dr. Florian Mulks <ff@mulks.ac>"]
keywords = ["bevy", "enum", "events", "macro"]
categories = ["game-development"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["deref"]
deref = []
fsm = ["bevy_fsm"]

[dependencies]
syn = { version = "2.0.107", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
bevy_fsm = { git = "https://github.com/ffmulks/bevy_fsm", branch = "main", optional = true }

[dev-dependencies]
bevy = { version = "0.16", default-features = false }
