[package]
name = "bevy_enum_event"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "General-purpose enum to Bevy event conversion macro - generates Event and EntityEvent types from enum variants with support for entity targeting and propagation"
repository = "https://github.com/ffmulks/bevy_enum_event"
authors = ["Dr. Florian Mulks <dr@mulks.ac>"]
keywords = ["bevy", "enum", "events", "macro"]
categories = ["game-development"]
readme = "README.md"

[lib]
proc-macro = true

[features]
default = ["deref"]
deref = []

[dependencies]
syn = { version = "2.0.107", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
bevy = { version = "0.17", default-features = false }
